--- a/category.html
+++ b/category.html
@@ -13,16 +13,16 @@
             <h4 class="text-white mb-4">Меню</h4>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Главная</a>
+                    <a class="nav-link text-white" href="main.html">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Товары</a>
+                    <a class="nav-link text-white" href="catalog.html">Товары</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active text-white" href="#">Категории</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Контакты</a>
+                    <a class="nav-link text-white" href="contacts.html">Контакты</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#"> </a>
