--- a/contacts.html
+++ b/contacts.html
@@ -9,17 +9,17 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-1 bg-dark text-white vh-100 p-3 d-flex flex-column">
+        <div class="col-2 bg-dark text-white vh-100 p-3 d-flex flex-column">
             <h4 class="text-white mb-4">Меню</h4>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Главная</a>
+                    <a class="nav-link text-white" href="main.html">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Товары</a>
+                    <a class="nav-link text-white" href="catalog.html">Товары</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Категории</a>
+                    <a class="nav-link text-white" href="category.html">Категории</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active text-white" href="#">Контакты</a>
