--- a/main.html
+++ b/main.html
@@ -16,16 +16,16 @@
                     <a class="nav-link active text-white" href="#">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Товары</a>
+                    <a class="nav-link text-white" href="catalog.html">Товары</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Категории</a>
+                    <a class="nav-link text-white" href="category.html">Категории</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Контакты</a>
+                    <a class="nav-link text-white" href="contacts.html">Контакты</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#"> </a>
+                    <a class="nav-link text-white" href="main.html"> </a>
                 </li>
             </ul>
             <div class="mt-auto mb-3">
@@ -37,12 +37,8 @@
                         Пользователь
                     </button>
                     <ul class="dropdown-menu">
-                        <li>
-                            <button class="dropdown-item" type="button">Профиль</button>
-                        </li>
-                        <li>
-                            <button class="dropdown-item" type="button">Выход</button>
-                        </li>
+                        <li><button class="dropdown-item" type="button">Профиль</button></li>
+                        <li><button class="dropdown-item" type="button">Выход</button></li>
                     </ul>
                 </div>
             </div>
