--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
             <h4 class="text-white mb-4">Меню</h4>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="main.html">Главная</a>
+                    <a class="nav-link text-white" href="home.html">Главная</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="catalog.html">Товары</a>
